# HelloWorld

./: .cproject  CMakeLists.txt  README.md  gdbinit.txt  hello.c
include/: canopen_master.h  umic_dio.h  umic_fram.h  umic_info.h  umic_led.h  umic_relay.h  umic_temp.h
lib/: libumic.so.1.0  libumic.so.1.2  libumic.so.1.4  libumic.so.2
lib/arm-linux-gnueabihf/perl/5.22.1/: perllocal.pod
lib/arm-linux-gnueabihf/perl/5.22.1/auto/Shell/: .packlist
source/: hello.c
